Add update recipe endpoint
