# server/src/Recipes.WebApi/Endpoints/Meals/UpdateMeal/UpdateMealRequest.cs
@@ -2,9 +2,11 @@ namespace Recipes.WebApi.Endpoints.Meals.UpdateMeal;
 
 public sealed class UpdateMealRequest
 {
-    public int? RecipeId { get; init; }
-    
-    public string? Date { get; init; }
-    
-    public bool? Completed { get; init; }
+    public int Id { get; init; }
+
+    public int RecipeId { get; init; }
+
+    public string Date { get; init; } = null!;
+
+    public bool Completed { get; init; }
 }
